--- a/styles/home.css
+++ b/styles/home.css
@@ -101,6 +101,11 @@ hr {
     padding: 0;
 }
 
+.post-item-container a {
+    text-decoration: none;
+    color: #000000;
+}
+
 .post-items {
     width: 500px;
     height: 480px;
@@ -112,12 +117,12 @@ hr {
 }
 
 .button {
-    margin-top: -35px;
+    margin-top: -30px;
     display: flex;
     justify-content: center;
 }
 
-.button a {
+.button span {
     padding: 6px 10px;
     background: #7D4CDB;
     color: #ffffff;
